// Copyright Â© 2017-2018 Stratumn SAS
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

import "github.com/stratumn/go-indigonode/cli/grpc/ext/ext.proto";

package stratumn.indigonode.app.clock.grpc;

option go_package = "github.com/stratumn/go-indigonode/app/clock/grpc;grpc";

// The clock service definition.
service Clock {
  // Returns the local time.
  rpc Local (LocalReq) returns (Time) {
    option (stratumn.indigonode.cli.ext.method_desc) = "Display the node's local time";
  }

  // Returns a peer's remote time.
  rpc Remote (RemoteReq) returns (Time) {
    option (stratumn.indigonode.cli.ext.method_desc) = "Display the peer's remote time";
  }
}

// The Local request message.
message LocalReq {
}

// The Remote request message.
message RemoteReq {
  bytes peer_id = 1 [
    (stratumn.indigonode.cli.ext.field_desc) = "Peer ID",
    (stratumn.indigonode.cli.ext.field_required) = true,
    (stratumn.indigonode.cli.ext.field_base58) = true
  ];
}

// The time message containing a Unix nano timestamp.
message Time {
  int64 timestamp = 1 [(stratumn.indigonode.cli.ext.field_time) = true];
}

